--- a/mandelbulber2/qt/dock_fractal.ui
+++ b/mandelbulber2/qt/dock_fractal.ui
@@ -156,8 +156,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>372</width>
-                <height>802</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_1" stretch="1,0">
@@ -225,8 +225,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_3">
@@ -284,8 +284,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_4">
@@ -343,8 +343,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_5">
@@ -402,8 +402,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_6">
@@ -461,8 +461,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_7">
@@ -520,8 +520,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_8">
@@ -579,8 +579,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_9">
@@ -638,8 +638,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>92</width>
-                <height>22</height>
+                <width>370</width>
+                <height>799</height>
                </rect>
               </property>
               <layout class="QVBoxLayout" name="verticalLayoutScroll_fractal_10">
@@ -746,8 +746,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>362</width>
-            <height>857</height>
+            <width>364</width>
+            <height>942</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_68">
@@ -1706,7 +1706,7 @@ distance estimation)</string>
           <bool>true</bool>
          </property>
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Boolean operators between fractal shapes.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Boolean operators between fractal shapes.&lt;br/&gt;Additional controls will appear at the bottom of each formula UI.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="title">
           <string>Boo&amp;lean operators</string>
@@ -2282,8 +2282,8 @@ distance estimation)</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>380</width>
-            <height>851</height>
+            <width>378</width>
+            <height>853</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_74">
